--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uniques",
   "description": "Remove duplicates from an array",
   "version": "0.1.0",
-  "main": "./dist/library.js",
+  "main": "./dist/uniques.js",
   "devDependencies": {
     "babel-cli": "^6.2.4",
     "babel-preset-es2015": "^6.3.13",
