--- a/package.json
+++ b/package.json
@@ -1,36 +1,18 @@
 {
   "name": "uniques",
-  "description": "Remove duplicates from an array",
-  "version": "0.1.0",
-  "main": "./dist/uniques.js",
-  "devDependencies": {
-    "babel-cli": "^6.2.4",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-register": "^6.2.0",
-    "mocha": "^2.2.5"
-  },
+  "version": "0.0.1",
+  "description": "Filter out duplicates in an array",
+  "main": "index.js",
   "scripts": {
-    "build": "babel src --out-dir dist",
-    "watch": "babel src --out-dir dist --watch",
-    "test": "mocha --ui tdd --compilers js:babel-register",
-    "prepublish": "npm run build"
+    "test": "prova"
   },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
+  "devDependencies": {
+    "prova": "*"
   },
   "repository": {
-		"type": "git",
-		"url": "https://github.com/montanaflynn/uniques.git"
-	},
-	"keywords": [
-		"unique",
-		"duplicate",
-		"same",
-		"type",
-		"array"
-	],
-	"author": "Montana Flynn",
-	"license": "MIT"
+    "url": "git@github.com:azer/uniques.git",
+    "type": "git"
+  },
+  "author": "Azer Koçulu <azer@kodfabrik.com>",
+  "license": "BSD"
 }
